Documentation Update for 2.4.0

--- a/documentation/admin/installing-plv8-windows/index.html
+++ b/documentation/admin/installing-plv8-windows/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.4.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -105,6 +105,7 @@
 <p>You can download the appropriate binaries for PostgreSQL 9.5/PostgreSQL 9.6 from:</p>
 <p><a href="http://www.postgresonline.com/journal/archives/360-PLV8-binaries-for-PostgreSQL-9.5-windows-both-32-bit-and-64-bit.html">PLV8-binaries-for-PostgreSQL-9.5-windows-both-32-bit-and-64-bit</a></p>
 <p><a href="http://www.postgresonline.com/journal/archives/367-PLV8-binaries-for-PostgreSQL-9.6beta1-windows-both-32-bit-and-64-bit.html">PLV8-binaries-for-PostgreSQL-9.6beta1-windows-both-32-bit-and-64-bit</a></p>
+<p><a href="http://www.postgresonline.com/journal/archives/379-PLV8-binaries-for-PostgreSQL-10-windows-both-32-bit-and-64-bit.htmll">PLV8-binaries-for-PostgreSQL-10-windows-both-32-bit-and-64-bit</a></p>
 <p>Download the version that corresponds to the version of PostgreSQL you installed (32 or 64 bit)</p>
 <h2 id="install">Install</h2>
 <p>The zip should contain 3 folders:</p>
