--- a/documentation/events/schema/index.html
+++ b/documentation/events/schema/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.4.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -94,7 +94,7 @@
 <h2 id="overriding-the-schema">Overriding the Schema</h2>
 <p>By default, the event store database objects are created in the default schema for the active <code>IDocumentStore</code>. If you wish,
 you can segregate the event store objects into a separate schema with this syntax:</p>
-<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Connection(&quot;some connection string&quot;);&#xD;&#xA;&#xD;&#xA;    // Places all the Event Store schema objects&#xD;&#xA;    // into the &quot;events&quot; schema&#xD;&#xA;    _.Events.DatabaseSchemaName = &quot;events&quot;;&#xD;&#xA;});&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;var store = DocumentStore.For(_ =&gt;&#xA;{&#xA;    _.Connection(&quot;some connection string&quot;);&#xA;&#xA;    // Places all the Event Store schema objects&#xA;    // into the &quot;events&quot; schema&#xA;    _.Events.DatabaseSchemaName = &quot;events&quot;;&#xA;});&#xA;</code></pre>
 <h2 id="database-tables">Database Tables</h2>
 <p>The events are stored in the <code>mt_events</code> table, with these columns:</p>
 <ul>
@@ -123,7 +123,7 @@ and to retain a potential way to uniquely identify events across databases.</p>
 </ul>
 <h2 id="event-metadata-in-code">Event Metadata in Code</h2>
 <p>Hopefully, it's relatively clear how the fields in <code>mt_events</code> maps to the <code>IEvent</code> interface in Marten:</p>
-<pre><code class="language-csharp">&#xD;&#xA;/// &lt;summary&gt;&#xD;&#xA;/// A reference to the stream that contains&#xD;&#xA;/// this event&#xD;&#xA;/// &lt;/summary&gt;&#xD;&#xA;public Guid StreamId { get; set; }&#xD;&#xA;&#xD;&#xA;/// &lt;summary&gt;&#xD;&#xA;/// A reference to the stream if the stream&#xD;&#xA;/// identier mode is AsString&#xD;&#xA;/// &lt;/summary&gt;&#xD;&#xA;public string StreamKey { get; set; }&#xD;&#xA;&#xD;&#xA;/// &lt;summary&gt;&#xD;&#xA;/// An alternative Guid identifier to identify&#xD;&#xA;/// events across databases&#xD;&#xA;/// &lt;/summary&gt;&#xD;&#xA;public Guid Id { get; set; }&#xD;&#xA;&#xD;&#xA;/// &lt;summary&gt;&#xD;&#xA;/// An event&#x27;s version position within its event stream&#xD;&#xA;/// &lt;/summary&gt;&#xD;&#xA;public int Version { get; set; }&#xD;&#xA;&#xD;&#xA;/// &lt;summary&gt;&#xD;&#xA;/// A global sequential number identifying the Event&#xD;&#xA;/// &lt;/summary&gt;&#xD;&#xA;public long Sequence { get; set; }&#xD;&#xA;&#xD;&#xA;/// &lt;summary&gt;&#xD;&#xA;/// The actual event data&#xD;&#xA;/// &lt;/summary&gt;&#xD;&#xA;public T Data { get; set; }&#xD;&#xA;&#xD;&#xA;/// &lt;summary&gt;&#xD;&#xA;/// The UTC time that this event was originally captured&#xD;&#xA;/// &lt;/summary&gt;&#xD;&#xA;public DateTimeOffset Timestamp { get; set; }&#xD;&#xA;&#xD;&#xA;public string TenantId { get; set; }&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;/// &lt;summary&gt;&#xA;/// A reference to the stream that contains&#xA;/// this event&#xA;/// &lt;/summary&gt;&#xA;public Guid StreamId { get; set; }&#xA;&#xA;/// &lt;summary&gt;&#xA;/// A reference to the stream if the stream&#xA;/// identier mode is AsString&#xA;/// &lt;/summary&gt;&#xA;public string StreamKey { get; set; }&#xA;&#xA;/// &lt;summary&gt;&#xA;/// An alternative Guid identifier to identify&#xA;/// events across databases&#xA;/// &lt;/summary&gt;&#xA;public Guid Id { get; set; }&#xA;&#xA;/// &lt;summary&gt;&#xA;/// An event&#x27;s version position within its event stream&#xA;/// &lt;/summary&gt;&#xA;public int Version { get; set; }&#xA;&#xA;/// &lt;summary&gt;&#xA;/// A global sequential number identifying the Event&#xA;/// &lt;/summary&gt;&#xA;public long Sequence { get; set; }&#xA;&#xA;/// &lt;summary&gt;&#xA;/// The actual event data&#xA;/// &lt;/summary&gt;&#xA;public T Data { get; set; }&#xA;&#xA;/// &lt;summary&gt;&#xA;/// The UTC time that this event was originally captured&#xA;/// &lt;/summary&gt;&#xA;public DateTimeOffset Timestamp { get; set; }&#xA;&#xA;public string TenantId { get; set; }&#xA;</code></pre>
 <p>The full event data is available on <code>EventStream</code> and <code>IEvent</code> objects immediately after committing a transaction that involves
 event capture. See <a href="/marten/documentation/documents/diagnostics">Diagnostics and Instrumentation</a> for more information on capturing event data in the instrumentation
 hooks.</p>
