--- a/documentation/documents/advanced/index.html
+++ b/documentation/documents/advanced/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.4.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -92,7 +92,7 @@
 			      	<div id="main-pane">
 			      		<!--Title: Advanced Topics-->
 <p>You've got the basics of document storage down, now it's time to dig into the more advanced features of Marten:</p>
-<ul class="table-of-contents"><li><a href="/marten/documentation/documents/advanced/hierarchies">Document Hierarchies</a></li><li><a href="/marten/documentation/documents/advanced/customizing_linq">Extending Marten&#x27;s Linq Support</a></li><li><a href="/marten/documentation/documents/advanced/identitymap">Identity Map Mechanics</a></li><li><a href="/marten/documentation/documents/advanced/javascript_transformations">Javascript Transformations</a></li><li><a href="/marten/documentation/documents/advanced/optimistic_concurrency">Optimistic Concurrency</a></li><li><a href="/marten/documentation/documents/advanced/soft_deletes">Soft Deletes</a></li><li><a href="/marten/documentation/documents/advanced/structural_typing">Structural Typing</a></li><li><a href="/marten/documentation/documents/advanced/cleaning">Tearing Down Document Storage</a></li><li><a href="/marten/documentation/documents/advanced/patch_api">The Patching API</a></li></ul>
+<ul class="table-of-contents"><li><a href="/marten/documentation/documents/advanced/hierarchies">Document Hierarchies</a></li><li><a href="/marten/documentation/documents/advanced/eject">Ejecting Documents from a Session</a></li><li><a href="/marten/documentation/documents/advanced/existing_transactions">Enlisting in Existing Transactions</a></li><li><a href="/marten/documentation/documents/advanced/customizing_linq">Extending Marten&#x27;s Linq Support</a></li><li><a href="/marten/documentation/documents/advanced/identitymap">Identity Map Mechanics</a></li><li><a href="/marten/documentation/documents/advanced/javascript_transformations">Javascript Transformations</a></li><li><a href="/marten/documentation/documents/advanced/optimistic_concurrency">Optimistic Concurrency</a></li><li><a href="/marten/documentation/documents/advanced/extensions">Schema Feature Extensions</a></li><li><a href="/marten/documentation/documents/advanced/soft_deletes">Soft Deletes</a></li><li><a href="/marten/documentation/documents/advanced/structural_typing">Structural Typing</a></li><li><a href="/marten/documentation/documents/advanced/cleaning">Tearing Down Document Storage</a></li><li><a href="/marten/documentation/documents/advanced/patch_api">The Patching API</a></li></ul>
 
 			      	</div>
 
