--- a/documentation/documents/advanced/optimistic_concurrency/index.html
+++ b/documentation/documents/advanced/optimistic_concurrency/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.4.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -44,7 +44,7 @@
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
 		        </li>
 		      	<li><a href="/marten/documentation/documents/advanced/javascript_transformations" title="Javascript Transformations">Previous</a></li>
-		      	<li><a href="/marten/documentation/documents/advanced/soft_deletes" title="Soft Deletes">Next</a></li>
+		      	<li><a href="/marten/documentation/documents/advanced/extensions" title="Schema Feature Extensions">Next</a></li>
 		      </ul>
       <div class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -77,7 +77,7 @@
 
 		        </ul>
 
-		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/advanced/soft_deletes">Soft Deletes</a></p>
+		        	<h3 class="no-margin">Next</h3><p><a href="/marten/documentation/documents/advanced/extensions">Schema Feature Extensions</a></p>
 		        	<h3 class="no-margin">Previous</h3><a href="/marten/documentation/documents/advanced/javascript_transformations">Javascript Transformations</a></p>
 
 		        </ul>
@@ -95,16 +95,16 @@
 <p>I first learned about this concept from Martin Fowler's <a href="http://martinfowler.com/eaaCatalog/">PEAA book</a>. From <a href="http://martinfowler.com/eaaCatalog/optimisticOfflineLock.html">Fowler's definition</a>, offline optimistic concurrency:</p>
 <blockquote><i>Prevents conflicts between concurrent business transactions by detecting a conflict and rolling back the transaction.</i></blockquote>
 <p>In Marten's case, you have to explicitly opt into optimistic versioning for each document type. You can do that with either an attribute on your document type like so:</p>
-<pre><code class="language-csharp">&#xD;&#xA;[UseOptimisticConcurrency]&#xD;&#xA;public class CoffeeShop : Shop&#xD;&#xA;{&#xD;&#xA;    // Guess where I&#x27;m at as I code this?&#xD;&#xA;    public string Name { get; set; } = &quot;Starbucks&quot;;&#xD;&#xA;    public ICollection&lt;Guid&gt; Employees { get; set; } = new List&lt;Guid&gt;();&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;[UseOptimisticConcurrency]&#xA;public class CoffeeShop : Shop&#xA;{&#xA;    // Guess where I&#x27;m at as I code this?&#xA;    public string Name { get; set; } = &quot;Starbucks&quot;;&#xA;    public ICollection&lt;Guid&gt; Employees { get; set; } = new List&lt;Guid&gt;();&#xA;}&#xA;</code></pre>
 <p>Or by using Marten's configuration API to do it programmatically:</p>
-<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    // Adds optimistic concurrency checking to Issue&#xD;&#xA;    _.Schema.For&lt;Issue&gt;().UseOptimisticConcurrency(true);&#xD;&#xA;});&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;var store = DocumentStore.For(_ =&gt;&#xA;{&#xA;    // Adds optimistic concurrency checking to Issue&#xA;    _.Schema.For&lt;Issue&gt;().UseOptimisticConcurrency(true);&#xA;});&#xA;</code></pre>
 <p>Once optimistic concurrency is turned on for the CoffeeShop document type, a session will now only be able to update a document if the document has been unchanged in the database since it was initially loaded.</p>
 <p>To demonstrate the failure case, consider the following  acceptance test from Marten's codebase:</p>
-<pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void update_with_stale_version_standard()&#xD;&#xA;{&#xD;&#xA;    var doc1 = new CoffeeShop();&#xD;&#xA;    using (var session = theStore.OpenSession())&#xD;&#xA;    {&#xD;&#xA;        session.Store(doc1);&#xD;&#xA;        session.SaveChanges();&#xD;&#xA;    }&#xD;&#xA;&#xD;&#xA;    var session1 = theStore.DirtyTrackedSession();&#xD;&#xA;    var session2 = theStore.DirtyTrackedSession();&#xD;&#xA;&#xD;&#xA;    var session1Copy = session1.Load&lt;CoffeeShop&gt;(doc1.Id);&#xD;&#xA;    var session2Copy = session2.Load&lt;CoffeeShop&gt;(doc1.Id);&#xD;&#xA;&#xD;&#xA;    try&#xD;&#xA;    {&#xD;&#xA;        session1Copy.Name = &quot;Mozart&#x27;s&quot;;&#xD;&#xA;        session2Copy.Name = &quot;Dominican Joe&#x27;s&quot;;&#xD;&#xA;&#xD;&#xA;        // Should go through just fine&#xD;&#xA;        session2.SaveChanges();&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;        var ex = Exception&lt;AggregateException&gt;.ShouldBeThrownBy(() =&gt;&#xD;&#xA;        {&#xD;&#xA;            session1.SaveChanges();&#xD;&#xA;        });&#xD;&#xA;&#xD;&#xA;        var concurrency = ex.InnerExceptions.OfType&lt;ConcurrencyException&gt;().Single();&#xD;&#xA;        concurrency.Message.ShouldBe($&quot;Optimistic concurrency check failed for {typeof(CoffeeShop).FullName} #{doc1.Id}&quot;);&#xD;&#xA;    }&#xD;&#xA;    finally&#xD;&#xA;    {&#xD;&#xA;        session1.Dispose();&#xD;&#xA;        session2.Dispose();&#xD;&#xA;    }&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        query.Load&lt;CoffeeShop&gt;(doc1.Id).Name.ShouldBe(&quot;Dominican Joe&#x27;s&quot;);&#xD;&#xA;    }&#xD;&#xA;&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;[Fact]&#xA;public void update_with_stale_version_standard()&#xA;{&#xA;    var doc1 = new CoffeeShop();&#xA;    using (var session = theStore.OpenSession())&#xA;    {&#xA;        session.Store(doc1);&#xA;        session.SaveChanges();&#xA;    }&#xA;&#xA;    var session1 = theStore.DirtyTrackedSession();&#xA;    var session2 = theStore.DirtyTrackedSession();&#xA;&#xA;    var session1Copy = session1.Load&lt;CoffeeShop&gt;(doc1.Id);&#xA;    var session2Copy = session2.Load&lt;CoffeeShop&gt;(doc1.Id);&#xA;&#xA;    try&#xA;    {&#xA;        session1Copy.Name = &quot;Mozart&#x27;s&quot;;&#xA;        session2Copy.Name = &quot;Dominican Joe&#x27;s&quot;;&#xA;&#xA;        // Should go through just fine&#xA;        session2.SaveChanges();&#xA;&#xA;&#xA;        var ex = Exception&lt;AggregateException&gt;.ShouldBeThrownBy(() =&gt;&#xA;        {&#xA;            session1.SaveChanges();&#xA;        });&#xA;&#xA;        var concurrency = ex.InnerExceptions.OfType&lt;ConcurrencyException&gt;().Single();&#xA;        concurrency.Message.ShouldBe($&quot;Optimistic concurrency check failed for {typeof(CoffeeShop).FullName} #{doc1.Id}&quot;);&#xA;    }&#xA;    finally&#xA;    {&#xA;        session1.Dispose();&#xA;        session2.Dispose();&#xA;    }&#xA;&#xA;    using (var query = theStore.QuerySession())&#xA;    {&#xA;        query.Load&lt;CoffeeShop&gt;(doc1.Id).Name.ShouldBe(&quot;Dominican Joe&#x27;s&quot;);&#xA;    }&#xA;&#xA;}&#xA;</code></pre>
 <p>Marten is throwing an AggregateException for the entire batch of changes being persisted from SaveChanges()/SaveChangesAsync() after rolling back the current database transaction. The individual ConcurrencyException's inside of the aggregated exception expose information about the actual document type and identity that failed.</p>
 <h3 id="overriding-optimistic-concurrency-in-session">Overriding Optimistic Concurrency in Session</h3>
 <p>Marten allows overriding store-wide optimistic concurrency settings within a session via <code>SessionOptions</code>, whereby the <code>ConcurrencyChecks</code> can be set to <code>ConcurrencyChecks.Disabled</code>.</p>
-<pre><code class="language-csharp">&#xD;&#xA;var session1 = theStore.OpenSession(new SessionOptions&#xD;&#xA;{&#xD;&#xA;    ConcurrencyChecks = ConcurrencyChecks.Disabled,&#xD;&#xA;    Tracking = DocumentTracking.DirtyTracking&#xD;&#xA;});&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;var session1 = theStore.OpenSession(new SessionOptions&#xA;{&#xA;    ConcurrencyChecks = ConcurrencyChecks.Disabled,&#xA;    Tracking = DocumentTracking.DirtyTracking&#xA;});&#xA;</code></pre>
 <h2 id="how-it-works">How it works</h2>
 <p>The optimistic concurrency checks work by adding a new argument to the <em>upsert</em> function for a document type to represent the
 current version that was loaded by the current session. If that argument matches the value in the database column, everything works
@@ -115,7 +115,7 @@ with all the detected violations.</p>
 <h2 id="storing-a-document-with-a-given-version">Storing a Document with a Given Version</h2>
 <p>To designate the version of the document you're trying to store, you can use the <code>IDocumentSession.Store(doc, version)</code> method
 shown below:</p>
-<pre><code class="language-csharp">&#xD;&#xA;[Fact]&#xD;&#xA;public void store_with_the_right_version()&#xD;&#xA;{&#xD;&#xA;    var doc1 = new CoffeeShop();&#xD;&#xA;    using (var session = theStore.OpenSession())&#xD;&#xA;    {&#xD;&#xA;        session.Store(doc1);&#xD;&#xA;        session.SaveChanges();&#xD;&#xA;    }&#xD;&#xA;&#xD;&#xA;    var metadata = theStore.Tenancy.Default.MetadataFor(doc1);&#xD;&#xA;&#xD;&#xA;    using (var session = theStore.OpenSession())&#xD;&#xA;    {&#xD;&#xA;        doc1.Name = &quot;Mozart&#x27;s&quot;;&#xD;&#xA;        session.Store(doc1, metadata.CurrentVersion);&#xD;&#xA;&#xD;&#xA;        session.SaveChanges();&#xD;&#xA;    }&#xD;&#xA;&#xD;&#xA;    using (var query = theStore.QuerySession())&#xD;&#xA;    {&#xD;&#xA;        query.Load&lt;CoffeeShop&gt;(doc1.Id).Name&#xD;&#xA;            .ShouldBe(&quot;Mozart&#x27;s&quot;);&#xD;&#xA;    }&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;[Fact]&#xA;public void store_with_the_right_version()&#xA;{&#xA;    var doc1 = new CoffeeShop();&#xA;    using (var session = theStore.OpenSession())&#xA;    {&#xA;        session.Store(doc1);&#xA;        session.SaveChanges();&#xA;    }&#xA;&#xA;    var metadata = theStore.Tenancy.Default.MetadataFor(doc1);&#xA;&#xA;    using (var session = theStore.OpenSession())&#xA;    {&#xA;        doc1.Name = &quot;Mozart&#x27;s&quot;;&#xA;        session.Store(doc1, metadata.CurrentVersion);&#xA;&#xA;        session.SaveChanges();&#xA;    }&#xA;&#xA;    using (var query = theStore.QuerySession())&#xA;    {&#xA;        query.Load&lt;CoffeeShop&gt;(doc1.Id).Name&#xA;            .ShouldBe(&quot;Mozart&#x27;s&quot;);&#xA;    }&#xA;}&#xA;</code></pre>
 <p>This method might come in handy if you detect that a document in your current session has been changed by another session.</p>
 
 			      	</div>
@@ -129,7 +129,7 @@ shown below:</p>
 				        </span>
 				        <span class="pull-right">
 
-				        	<strong>Next: </strong><a href="/marten/documentation/documents/advanced/soft_deletes">Soft Deletes</a>
+				        	<strong>Next: </strong><a href="/marten/documentation/documents/advanced/extensions">Schema Feature Extensions</a>
 
 				        </span>
 			      	</nav>
