--- a/documentation/documents/customizing/foreign_keys/index.html
+++ b/documentation/documents/customizing/foreign_keys/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.4.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -96,10 +96,10 @@ where they still add value? In this case, Marten allows for a special kind of &q
 that also adds a foreign key constraint to enforce referential integrity between document types.</p>
 <p>One of our sample document types in Marten is the <code>Issue</code> class that has
 a couple properties that link to the id's of related <code>User</code> documents:</p>
-<pre><code class="language-csharp">&#xD;&#xA;public class Issue&#xD;&#xA;{&#xD;&#xA;    public Issue()&#xD;&#xA;    {&#xD;&#xA;        Id = Guid.NewGuid();&#xD;&#xA;    }&#xD;&#xA;&#xD;&#xA;    public string[] Tags { get; set; }&#xD;&#xA;&#xD;&#xA;    public Guid Id { get; set; }&#xD;&#xA;&#xD;&#xA;    public string Title { get; set; }&#xD;&#xA;&#xD;&#xA;    public int Number { get; set; }&#xD;&#xA;&#xD;&#xA;    public Guid? AssigneeId { get; set; }&#xD;&#xA;&#xD;&#xA;    public Guid? ReporterId { get; set; }&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;public class Issue&#xA;{&#xA;    public Issue()&#xA;    {&#xA;        Id = Guid.NewGuid();&#xA;    }&#xA;&#xA;    public string[] Tags { get; set; }&#xA;&#xA;    public Guid Id { get; set; }&#xA;&#xA;    public string Title { get; set; }&#xA;&#xA;    public int Number { get; set; }&#xA;&#xA;    public Guid? AssigneeId { get; set; }&#xA;&#xA;    public Guid? ReporterId { get; set; }&#xA;}&#xA;</code></pre>
 <p>If I want to enforce referential integrity between the <code>Issue</code> document and the <code>User</code> documents,
 I can use this syntax shown below to configure Marten:</p>
-<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    _.Connection(&quot;some database connection&quot;);&#xD;&#xA;&#xD;&#xA;    // In the following line of code, I&#x27;m setting&#xD;&#xA;    // up a foreign key relationship to the User document&#xD;&#xA;    _.Schema.For&lt;Issue&gt;().ForeignKey&lt;User&gt;(x =&gt; x.AssigneeId);&#xD;&#xA;});&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;var store = DocumentStore.For(_ =&gt;&#xA;{&#xA;    _.Connection(&quot;some database connection&quot;);&#xA;&#xA;    // In the following line of code, I&#x27;m setting&#xA;    // up a foreign key relationship to the User document&#xA;    _.Schema.For&lt;Issue&gt;().ForeignKey&lt;User&gt;(x =&gt; x.AssigneeId);&#xA;});&#xA;</code></pre>
 <p>With the configuration above, Marten will make an <code>assignee_id</code> field in the database table and build a
 foreign key constraint to the <code>User</code> document like so:</p>
 <pre>
@@ -116,7 +116,7 @@ In the <code>Issue</code> referencing <code>User</code> example above, this mean
 to save the new user first so that the issue will not fail with referential integrity violations.</p>
 <h2 id="configuring-with-attributes">Configuring with Attributes</h2>
 <p>You can optionally configure properties or fields as foreign key relationships with the <code>[ForeignKey]</code> attribute:</p>
-<pre><code class="language-csharp">&#xD;&#xA;public class Issue&#xD;&#xA;{&#xD;&#xA;    public Issue()&#xD;&#xA;    {&#xD;&#xA;        Id = Guid.NewGuid();&#xD;&#xA;    }&#xD;&#xA;&#xD;&#xA;    public Guid Id { get; set; }&#xD;&#xA;&#xD;&#xA;    [ForeignKey(typeof(User))]&#xD;&#xA;    public Guid UserId { get; set; }&#xD;&#xA;&#xD;&#xA;    public Guid? OtherUserId { get; set; }&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;public class Issue&#xA;{&#xA;    public Issue()&#xA;    {&#xA;        Id = Guid.NewGuid();&#xA;    }&#xA;&#xA;    public Guid Id { get; set; }&#xA;&#xA;    [ForeignKey(typeof(User))]&#xA;    public Guid UserId { get; set; }&#xA;&#xA;    public Guid? OtherUserId { get; set; }&#xA;}&#xA;</code></pre>
 
 			      	</div>
 
