--- a/documentation/documents/index.html
+++ b/documentation/documents/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.4.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -97,12 +97,12 @@ for RavenDb in several existing applications. As such, you may clearly see some 
 <h2 id="document-store">Document Store</h2>
 <p>To use Marten as a document database, you first need a Postgresql schema that will store your documents. Once you have that, getting started
 with Marten can be as simple as opening a <code>DocumentStore</code> to your new Postgresql schema:</p>
-<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore&#xD;&#xA;    .For(&quot;host=localhost;database=marten_test;password=mypassword;username=someuser&quot;);&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;var store = DocumentStore&#xA;    .For(&quot;host=localhost;database=marten_test;password=mypassword;username=someuser&quot;);&#xA;</code></pre>
 <p>The code sample above sets up document storage against the Postgresql at the connection string you supplied. In this &quot;quickstart&quot; configuration,
 Marten will build new database tables and functions for each new document type as needed <strong>if those database schema objects do not already exist</strong>.</p>
 <div class="alert alert-info">As of Marten v0.6, document storage tables will also be dropped and rebuilt if the actual database table does not match up with the document storage configuration. So if you add a searchable field or change the id type of a document type, Marten will regenerate the database schema objects when running with AutoCreateSchemaObjects = true.</div>
 <p>While the default &quot;auto-create&quot; database schema objects is fantastic for a development time experience, you may not want Marten to be building out new database schema objects at production time. You might also want to override the default JSON serialization, tweak the document storage for performance, or opt into Postgresql 9.5's fancy new &quot;upsert&quot; capability. For customization, you have a different syntax for bootstrapping a <code>DocumentStore</code>:</p>
-<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(_ =&gt;&#xD;&#xA;{&#xD;&#xA;    // Turn this off in production &#xD;&#xA;    _.AutoCreateSchemaObjects = AutoCreate.None;&#xD;&#xA;&#xD;&#xA;    // This is still mandatory&#xD;&#xA;    _.Connection(&quot;some connection string&quot;);&#xD;&#xA;&#xD;&#xA;    // Override the JSON Serialization&#xD;&#xA;    _.Serializer&lt;TestsSerializer&gt;();&#xD;&#xA;});&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;var store = DocumentStore.For(_ =&gt;&#xA;{&#xA;    // Turn this off in production &#xA;    _.AutoCreateSchemaObjects = AutoCreate.None;&#xA;&#xA;    // This is still mandatory&#xA;    _.Connection(&quot;some connection string&quot;);&#xA;&#xA;    // Override the JSON Serialization&#xA;    _.Serializer&lt;TestsSerializer&gt;();&#xA;});&#xA;</code></pre>
 <p>For more information on using the <code>IDocumentStore</code> and configuring document storage, see:</p>
 <ul>
 <li><a href="/marten/documentation/documents/customizing">Customizing Document Storage</a></li>
@@ -115,7 +115,7 @@ Marten will build new database tables and functions for each new document type a
 </ul>
 <h2 id="querying-and-loading-documents">Querying and Loading Documents</h2>
 <p>Now that we've got a document store, we can use that to create a new <code>IQuerySession</code> object just for querying or loading documents from the database:</p>
-<pre><code class="language-csharp">&#xD;&#xA;using (var session = store.QuerySession())&#xD;&#xA;{&#xD;&#xA;    var internalUsers = session&#xD;&#xA;        .Query&lt;User&gt;().Where(x =&gt; x.Internal).ToArray();&#xD;&#xA;}&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;using (var session = store.QuerySession())&#xA;{&#xA;    var internalUsers = session&#xA;        .Query&lt;User&gt;().Where(x =&gt; x.Internal).ToArray();&#xA;}&#xA;</code></pre>
 <p>For more information on the query support within Marten, see:</p>
 <ul>
 <li><a href="/marten/documentation/documents/querying/linq">Querying Documents with Linq</a></li>
@@ -129,7 +129,7 @@ Marten will build new database tables and functions for each new document type a
 <h2 id="persisting-documents">Persisting Documents</h2>
 <p>The main service for updating and persisting documents is the <code>IDocumentSession</code>. An <code>IDocumentSession</code> is created by your <code>IDocumentStore</code> from above
 in one of three ways:</p>
-<pre><code class="language-csharp">&#xD;&#xA;// Open a session for querying, loading, and &#xD;&#xA;// updating documents &#xD;&#xA;using (var session = store.LightweightSession())&#xD;&#xA;{&#xD;&#xA;    var user = new User {FirstName = &quot;Han&quot;, LastName = &quot;Solo&quot;};&#xD;&#xA;    session.Store(user);&#xD;&#xA;&#xD;&#xA;    session.SaveChanges();&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;// Open a session for querying, loading, and &#xD;&#xA;// updating documents with a backing &quot;Identity Map&quot;&#xD;&#xA;using (var session = store.OpenSession())&#xD;&#xA;{&#xD;&#xA;    var existing = session&#xD;&#xA;        .Query&lt;User&gt;()&#xD;&#xA;        .Where(x =&gt; x.FirstName == &quot;Han&quot; &amp;&amp; x.LastName == &quot;Solo&quot;)&#xD;&#xA;        .Single();&#xD;&#xA;}&#xD;&#xA;&#xD;&#xA;// Open a session for querying, loading, and &#xD;&#xA;// updating documents that performas automated&#xD;&#xA;// &quot;dirty&quot; checking of previously loaded documents&#xD;&#xA;using (var session = store.DirtyTrackedSession())&#xD;&#xA;{&#xD;&#xA;    &#xD;&#xA;}&#xD;&#xA;</code></pre>
+<pre><code class="language-csharp">&#xA;// Open a session for querying, loading, and &#xA;// updating documents &#xA;using (var session = store.LightweightSession())&#xA;{&#xA;    var user = new User {FirstName = &quot;Han&quot;, LastName = &quot;Solo&quot;};&#xA;    session.Store(user);&#xA;&#xA;    session.SaveChanges();&#xA;}&#xA;&#xA;// Open a session for querying, loading, and &#xA;// updating documents with a backing &quot;Identity Map&quot;&#xA;using (var session = store.OpenSession())&#xA;{&#xA;    var existing = session&#xA;        .Query&lt;User&gt;()&#xA;        .Where(x =&gt; x.FirstName == &quot;Han&quot; &amp;&amp; x.LastName == &quot;Solo&quot;)&#xA;        .Single();&#xA;}&#xA;&#xA;// Open a session for querying, loading, and &#xA;// updating documents that performas automated&#xA;// &quot;dirty&quot; checking of previously loaded documents&#xA;using (var session = store.DirtyTrackedSession())&#xA;{&#xA;    &#xA;}&#xA;</code></pre>
 <p>In all cases, <code>IDocumentSession</code> has the same query and loading functions as the read only <code>IQuerySession</code>.</p>
 <p>For more information on persisting documents and the different underlying behavior of the three flavors of <code>IDocumentSession</code> above, see:</p>
 <ul>
