--- a/documentation/troubleshoot/index.html
+++ b/documentation/troubleshoot/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="banner">
 		  <div class="container">
 		    <div class="navbar-header">
-		      <a href="/marten" class="navbar-brand">Marten 2.0.0</a>
+		      <a href="/marten" class="navbar-brand">Marten 2.4.0</a>
 		    </div>
 		    <nav class="collapse navbar-collapse" role="navigation">
 		      <ul class="nav navbar-nav pull-right">
@@ -125,7 +125,7 @@
 </table>
 <p><strong>How do I serialize to Camel case?</strong></p>
 <p>While it's possible to accommodate any serialization schemes by implementing a custom <code>ISerializer</code>, Marten's built-in serializer (Json.Net) can be set to serialize to Camel case through <code>StoreOptions.UseDefaultSerialization</code>:</p>
-<pre><code class="language-csharp">&#xD;&#xA;var store = DocumentStore.For(storeOptions =&gt;&#xD;&#xA;{&#xD;&#xA;    // Change default casing to CamelCase&#xD;&#xA;    storeOptions.UseDefaultSerialization(casing: Casing.CamelCase);&#xD;&#xA;</code></pre> 	
+<pre><code class="language-csharp">&#xA;var store = DocumentStore.For(storeOptions =&gt;&#xA;{&#xA;    // Change default casing to CamelCase&#xA;    storeOptions.UseDefaultSerialization(casing: Casing.CamelCase);&#xA;</code></pre> 	
 <p><strong>How do I disable PLV8?</strong></p>
 <p>If you don't want PLV8 (required for Javascript transformations) related items in your database schema, you can disable PLV8 alltogether by setting <code>StoreOptions.PLV8Enabled</code> to false.</p>
 
