--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="https://gitter.im/JasperFx/Marten?utm_source=share-link&utm_medium=link&utm_campaign=share-link" onclick = $("#menu-close").click(); >Gitter Room</a>
             </li>
             <li>
-                <a href="http://build.fubu-project.org/project.html?projectId=Marten&branch_Marten=__all_branches__" onclick = $("#menu-close").click(); >TeamCity Page</a>
+                <a href="https://ci.appveyor.com/project/jasper-ci/marten/history" onclick = $("#menu-close").click(); >AppVeyor</a>
             </li>
             <li>
                 <a href="https://www.nuget.org/packages/Marten/" onclick = $("#menu-close").click(); >Nuget Downloads</a>
@@ -68,16 +68,16 @@
 			<img src="http://jasperfx.github.io/marten/content/images/banner.png" width="80%" align="middle"/>
             <h1 style="color:white">Marten</h1>
             <h3>Postgresql as Document Db &amp; Event Store for .Net Development</h3>
-			
+
                     <h2>Polyglot Persistence for .Net Systems using the Rock Solid Postgresql Database</h2>
                     <p class="lead">
-                        <a href="http://build.fubu-project.org/project.html?projectId=Marten&tab=projectOverview"><img src="https://img.shields.io/teamcity/http/build.fubu-project.org/s/marten_master.svg"></img></a>
+                        <a href="https://ci.appveyor.com/project/jasper-ci/marten/history"><img src="https://img.shields.io/appveyor/ci/jasper-ci/marten.svg"></img></a>
                         <a href="https://www.nuget.org/packages/Marten/"><img src="https://img.shields.io/nuget/v/Marten.svg"></img></a>
 
 
 <a href="https://gitter.im/jasperfx/marten?utm_source=badge&amp;utm_medium=badge&amp;utm_campaign=pr-badge&amp;utm_content=badge"><img src="https://camo.githubusercontent.com/da2edb525cde1455a622c58c0effc3a90b9a181c/68747470733a2f2f6261646765732e6769747465722e696d2f4a6f696e253230436861742e737667" alt="Join the chat at https://gitter.im/jasperfx/marten" data-canonical-src="https://badges.gitter.im/Join%20Chat.svg" style="max-width:100%;"></a>
                     </p>
-			
+
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
             <a href="getting_started" class="btn btn-dark btn-lg">Get started!</a>
@@ -105,7 +105,7 @@
           <h2>Document Database</h2>
           <p>The Marten library provides .Net developers with the ability to easily use the proven <a href="http://www.postgresql.org">Postgresql database engine</a>
 and its <a href="https://www.compose.io/articles/is-postgresql-your-next-json-database/">fantastic JSON support</a> as a fully fledged <a href="https://en.wikipedia.org/wiki/Document-oriented_database">document database</a>. The Marten team believes that a document database has far reaching benefits for developer productivity
-over relational databases with or without an ORM tool. 
+over relational databases with or without an ORM tool.
           </p>
           <p><a class="btn btn-default" href="/marten/documentation/documents" role="button">View details &raquo;</a></p>
         </div>
@@ -147,7 +147,7 @@ $('#search').keyup(function(e){
 
 
 
-}); 
+});
 
 </script>
 
